--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -81,7 +81,6 @@ button:focus {
 #scrubberDiv{
 	width: 100%;
 	max-width: 700px;
-	padding: 0px 30px;
 	margin-left: auto;
 	margin-right: auto;
     position: relative;
@@ -105,6 +104,55 @@ button:focus {
 
 .scrubberTag:hover > .scrubberTagPopup {
     display: block;
+}
+
+.scrubberMarker {
+    position: absolute;
+    top: 34px;
+    -webkit-appearance: none;
+}
+
+.scrubberMarker.scrubberLeft {
+    left: -6px;
+}
+
+.scrubberMarker.scrubberRight {
+    left: 5px;
+}
+
+.scrubberMarker::-webkit-slider-runnable-track {
+    height: 0px;
+    background-color: black;
+    border: none;
+}
+
+.scrubberMarker::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 21px;
+    width: 11px;
+    background: transparent;
+    margin-top: -22px;
+}
+
+.scrubberMarker.scrubberLeft::-webkit-slider-thumb {
+    background-image: url("../files/LeftScrubber.gif");
+}
+
+.scrubberMarker.scrubberRight::-webkit-slider-thumb {
+    background-image: url("../files/RightScrubber.gif");
+}
+
+.scrubberMarker.scrubberLeft:hover::-webkit-slider-thumb {
+    background-image: url("../files/LeftScrubberHover.gif");
+}
+
+.scrubberMarker.scrubberRight:hover::-webkit-slider-thumb {
+    background-image: url("../files/RightScrubberHover.gif");
+}
+
+.scrubberMarker:focus {
+    outline: none;
 }
 
 #title{
