Changed boundingBoxes to carDetection.

--- a/views/index.jade
+++ b/views/index.jade
@@ -145,5 +145,5 @@ html
 		script(src='/video_nacl.js')
 		script(src='/videoProjection.js')
 		script(src='/radar.js')
-		script(src='/boundingBoxes.js')
+		script(src='/carDetection.js')
 		script(src='/tags.js')
