--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -83,6 +83,7 @@ button:focus {
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
+    margin-bottom: 25px;
     position: relative;
 }
 
@@ -95,11 +96,14 @@ button:focus {
 
 .scrubberTagPopup {
     width: 150px;
-    top: -140px;
+    top: -157px;
     padding: 10px 10px 1px 10px;
     background-color: rgba(255,255,255,0.2);
     position: relative;
     display: none;
+}
+.scrubberTagPopup button {
+    color: #000;
 }
 
 .scrubberTag:hover > .scrubberTagPopup {
