Added precision and recall to web app.

--- a/views/index.jade
+++ b/views/index.jade
@@ -74,6 +74,11 @@ html
 										p {{tag.category.name}}
 										p {{tag.category.description}}
 				#right-side
+					.tag
+						h4 Precision
+							h5#precision Loading...
+						h4 Recall
+							h5#recall Loading...
 					#options.tab(ng-show="editor == 'lane'")
 						div
 							button#fork.actionBtn(type="button", ng-click="laneEditor.fork()", ng-show="laneEditor.showButton.fork")
