--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ html
 					#slideDiv.tab
 						div(ng-show="editor == 'lane'")
 							h4 Drag range
-							input#drrange(type="range", min="1", max="60", value="15", step="5", ng-model="dragRange")
+							input#drrange(type="range", min="1", max="60", step="5", ng-model="dragRange")
 						h4 Play speed
 						input#playspeedrange(type="range", min="1", max="5", value="1", step="1")
 				#left-bottom
