Adds no webgl exists message

--- a/views/index.jade
+++ b/views/index.jade
@@ -157,6 +157,7 @@ html
 		script(src='/javascripts/angular-animate.min.js')
 		script(src='/vendor/loading-bar.js')
 		script(src='/javascripts/three.min.js')
+		script(src="/javascripts/Detector.js")
 		script(src='/javascripts/OrbitControls.js')
 		script(src='/javascripts/TypedArrayUtils.js')
 		script(src='/javascripts/BinaryLoader.js')
