--- a/views/browser.jade
+++ b/views/browser.jade
@@ -19,7 +19,12 @@ block content
 											= run
 								.panel-collapse.collapse(id=run, role='tabpanel', aria-labelledby="heading" + run, aria-expanded='false', style='height: 0px;')
 									ul.list-group
-										- each edits, track in tracks
+										if(Object.keys(tracks).length === 0)
 											li
-												a(href="/edit?editor=lane&route=" + run + "%2F" + track + "&filename=" + filenames[edits[0]]).level2
-													=track
+												p.level2 No Tracks Ready 
+										else
+											- each edits, track in tracks
+
+												li
+													a(href="/edit?editor=lane&route=" + run + "%2F" + track + "&filename=" + filenames[edits[0]]).level2
+														=track
