--- a/views/index.jade
+++ b/views/index.jade
@@ -169,10 +169,8 @@ html
 									| Submit
 		script(src='/vendor/jquery.js')
 		script(src='/vendor/bootstrap.min.js')
-		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js")
-		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-animate.js")
-		//script(src="/vendor/angular.js")
-		//script(src='/javascripts/angular-animate.min.js')
+		script(src="/vendor/angular-1.3.10.min.js")
+		script(src='/vendor/angular-animate-1.3.10.js')
 		script(src='/vendor/loading-bar.js')
 		script(src='/javascripts/three.min.js')
 		script(src="/javascripts/Detector.js")
