separation between home-code and vendor code

--- a/views/index.jade
+++ b/views/index.jade
@@ -172,27 +172,27 @@ html
 		script(src="/vendor/angular-1.3.10.min.js")
 		script(src='/vendor/angular-animate-1.3.10.js')
 		script(src='/vendor/loading-bar.js')
-		script(src='/javascripts/three.min.js')
-		script(src="/javascripts/Detector.js")
-		script(src='/javascripts/OrbitControls.js')
-		script(src='/javascripts/TypedArrayUtils.js')
-		script(src='/javascripts/BinaryLoader.js')
-		script(src='/javascripts/async.js')
-		script(src='/javascripts/fpsmeter.js')
-		script(src='/javascripts/jscolor.js')
-		script(src='/javascripts/jszip.js')
-		script(src='/javascripts/jszip-utils.js')
-		script(src='/javascripts/numeric-1.2.6.js')
-		script(src='/javascripts/jpeg_encoder_basic.js')
-		script(src='/javascripts/jsmpg.js')
-		script(src='/app.js')
-		script(src='/draggable.js')
-		script(src='/laneEditor.js')
-		script(src='/tagEditor.js')
-		script(src='/loading.js')
-		script(src='/util.js')
-		script(src='/video_nacl.js')
-		script(src='/videoProjection.js')
-		script(src='/radar.js')
-		script(src='/carDetection.js')
-		script(src='/laneDetection.js')
+		script(src='/vendor/three.min.js')
+		script(src="/vendor/Detector.js")
+		script(src='/vendor/OrbitControls.js')
+		script(src='/vendor/TypedArrayUtils.js')
+		script(src='/vendor/BinaryLoader.js')
+		script(src='/vendor/async.js')
+		script(src='/vendor/fpsmeter.js')
+		script(src='/vendor/jscolor.js')
+		script(src='/vendor/jszip.js')
+		script(src='/vendor/jszip-utils.js')
+		script(src='/vendor/numeric-1.2.6.js')
+		script(src='/vendor/jpeg_encoder_basic.js')
+		script(src='/vendor/jsmpg.js')
+		script(src='/javascripts/app.js')
+		script(src='/javascripts/draggable.js')
+		script(src='/javascripts/laneEditor.js')
+		script(src='/javascripts/tagEditor.js')
+		script(src='/javascripts/loading.js')
+		script(src='/javascripts/util.js')
+		script(src='/javascripts/video_nacl.js')
+		script(src='/javascripts/videoProjection.js')
+		script(src='/javascripts/radar.js')
+		script(src='/javascripts/carDetection.js')
+		script(src='/javascripts/laneDetection.js')
