back to browse, not javascript back

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ html
 				nav.navbar.navbar-fixed-top
 					.container-fluid
 						.navbar-header
-							a.navbar-brand(href="javascript:history.back()")
+							a.navbar-brand(href="/browse")
 								i.fa.fa-chevron-circle-left.fa-2x
 							a.navbar-brand#trackName(href="") {{trackInfo.track}}
 						ul.nav.navbar-nav(ng-show="editor == 'lane'")
